working on film page

--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -7,5 +7,7 @@
   "comments": "Comments",
   "cinematic": "Cinematic",
   "series": "Series",
-  "summary_of_the_story": "Summary of The Story"
+  "summary_of_the_story": "Summary of The Story",
+  "films": "Films",
+  "film_informations": "Informations"
 }
