--- a/public/locales/fa-IR/common.json
+++ b/public/locales/fa-IR/common.json
@@ -7,5 +7,7 @@
   "comments": "دیدگاه ها",
   "cinematic": "سینمایی",
   "series": "سریال",
-  "summary_of_the_story": "خلاصه ای از داستان"
+  "summary_of_the_story": "خلاصه ای از داستان",
+  "films": "فیلم ها",
+  "film_informations": "اطلاعات اثر"
 }
