--- a/public/locales/en-US/common.json
+++ b/public/locales/en-US/common.json
@@ -9,5 +9,10 @@
   "series": "Series",
   "summary_of_the_story": "Summary of The Story",
   "films": "Films",
-  "film_informations": "Informations"
+  "film_informations": "Informations",
+  "title": "Title",
+  "genre": "Genre",
+  "director": "Director",
+  "country": "Country",
+  "rate": "Rate"
 }
